--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,11 +24,13 @@
     <script src="./js/todo.js"></script>
     <script src="./js/share.js"></script>
 </head>
+
 <body>
     <header>
         <h1>勤怠報告コピぺ用：出勤</h1>
     </header>
     <main>
+        <a href="/evening.html">退勤用</a>
         <section name="name">
             <div class="section userName border">
                 <div class="label">登録者名</div>
@@ -53,12 +56,12 @@
         </section>
         <section>
             <div class="section mtg border">
-                <div  class="label">【MTG】</div>
+                <div class="label">【MTG】</div>
                 <div class="addButton">
                     <input id="mtgAddButton" type="button" value="+">
                 </div>
                 <div id="mtgGroup">
-                    <div class="oneBlock" id="mtgElement1"> 
+                    <div class="oneBlock" id="mtgElement1">
                         <div class="minusButton"></div>
                         <div class="timeBlock">
                             <div>
@@ -68,46 +71,46 @@
                                     <option>9:15</option>
                                     <option>9:30</option>
                                     <option>9:45</option>
-                                    <option>10:00</option>                                
+                                    <option>10:00</option>
                                     <option>10:15</option>
                                     <option>10:30</option>
                                     <option>10:45</option>
-                                    <option>11:00</option>   
+                                    <option>11:00</option>
                                     <option>11:15</option>
                                     <option>11:30</option>
                                     <option>11:45</option>
-                                    <option>12:00</option>   
+                                    <option>12:00</option>
                                     <option>12:15</option>
                                     <option>12:30</option>
                                     <option>12:45</option>
-                                    <option>13:00</option>   
+                                    <option>13:00</option>
                                     <option>13:15</option>
                                     <option>13:30</option>
                                     <option>13:45</option>
-                                    <option>14:00</option>   
+                                    <option>14:00</option>
                                     <option>14:15</option>
                                     <option>14:30</option>
                                     <option>14:45</option>
-                                    <option>15:00</option>   
+                                    <option>15:00</option>
                                     <option>15:15</option>
                                     <option>15:30</option>
-                                    <option>15:45</option>                                
-                                    <option>16:00</option>   
+                                    <option>15:45</option>
+                                    <option>16:00</option>
                                     <option>16:15</option>
                                     <option>16:30</option>
                                     <option>16:45</option>
-                                    <option>17:00</option>   
+                                    <option>17:00</option>
                                     <option>17:15</option>
                                     <option>17:30</option>
                                     <option>17:45</option>
-                                    <option>18:00</option> 
+                                    <option>18:00</option>
                                     <option>18:15</option>
                                     <option>18:30</option>
                                     <option>18:45</option>
-                                    <option>19:00</option> 
+                                    <option>19:00</option>
                                     <option>19:15</option>
                                     <option>19:30</option>
-                                    <option>19:45</option>                               
+                                    <option>19:45</option>
                                 </select>
                             </div>
                             <div>
@@ -117,47 +120,47 @@
                                     <option>9:15</option>
                                     <option>9:30</option>
                                     <option>9:45</option>
-                                    <option>10:00</option>                                
+                                    <option>10:00</option>
                                     <option>10:15</option>
                                     <option>10:30</option>
                                     <option>10:45</option>
-                                    <option>11:00</option>   
+                                    <option>11:00</option>
                                     <option>11:15</option>
                                     <option>11:30</option>
                                     <option>11:45</option>
-                                    <option>12:00</option>   
+                                    <option>12:00</option>
                                     <option>12:15</option>
                                     <option>12:30</option>
                                     <option>12:45</option>
-                                    <option>13:00</option>   
+                                    <option>13:00</option>
                                     <option>13:15</option>
                                     <option>13:30</option>
                                     <option>13:45</option>
-                                    <option>14:00</option>   
+                                    <option>14:00</option>
                                     <option>14:15</option>
                                     <option>14:30</option>
                                     <option>14:45</option>
-                                    <option>15:00</option>   
+                                    <option>15:00</option>
                                     <option>15:15</option>
                                     <option>15:30</option>
-                                    <option>15:45</option>                                
-                                    <option>16:00</option>   
+                                    <option>15:45</option>
+                                    <option>16:00</option>
                                     <option>16:15</option>
                                     <option>16:30</option>
                                     <option>16:45</option>
-                                    <option>17:00</option>   
+                                    <option>17:00</option>
                                     <option>17:15</option>
                                     <option>17:30</option>
                                     <option>17:45</option>
-                                    <option>18:00</option> 
+                                    <option>18:00</option>
                                     <option>18:15</option>
                                     <option>18:30</option>
                                     <option>18:45</option>
-                                    <option>19:00</option> 
+                                    <option>19:00</option>
                                     <option>19:15</option>
                                     <option>19:30</option>
-                                    <option>19:45</option>                               
-                                </select>                    
+                                    <option>19:45</option>
+                                </select>
                             </div>
                         </div>
                         <div class="inputBlock">
@@ -172,7 +175,7 @@
             <div class="section todo border">
                 <div class="label">【本日作業】</div>
                 <div class="addButton">
-                    <input type="button" value="+" id="todoAddButton" >
+                    <input type="button" value="+" id="todoAddButton">
                 </div>
                 <div id="todoGroup">
                     <div class="oneBlock" id="todoElement1">
@@ -198,11 +201,12 @@
                 </div>
             </div>
         </section>
-        <section>     
+        <section>
             <div class="section copy">
                 <button id="copyButton">コピー実行</button>
             </div>
         </section>
     </main>
 </body>
+
 </html>
