--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h1>勤怠報告コピぺ用：出勤</h1>
     </header>
     <main>
-        <a href="evening.html">退勤用</a>
+        <a href="/tsMakeDailyReport/evening.html">退勤用</a>
         <section name="name">
             <div class="section userName border">
                 <div class="label">登録者名</div>
