--- a/index.html
+++ b/index.html
@@ -203,7 +203,13 @@
         </section>
         <section>
             <div class="section copy">
-                <button id="copyButton">コピー実行</button>
+                <div id="previewArea"
+                    style="white-space: pre-wrap; border: 1px solid #ccc; padding: 8px; margin-bottom: 8px; background: #f9f9f9;">
+                    ここにコピー内容のプレビューが表示されます
+                </div>
+                <div class="copyButton-center">
+                    <button id="copyButton">コピー実行</button>
+                </div>
             </div>
         </section>
     </main>
