--- a/evening.html
+++ b/evening.html
@@ -31,7 +31,7 @@
         <h1>勤怠報告コピぺ用：退勤</h1>
     </header>
     <main>
-        <a href="/tsMakeDailyReport/index.html">退勤用</a>
+        <a href="/tsMakeDailyReport/index.html">出勤用へ</a>
         <section name="name">
             <div class="section userName border">
                 <div class="label">登録者名</div>
