style : ヘッダーの色変えます

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>勤怠報告：出勤用</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.min.css">
     <link rel="stylesheet" href="./css/common.css">
+    <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/userName.css">
     <link rel="stylesheet" href="./css/workType.css">
     <link rel="stylesheet" href="./css/mtg.css">
