--- a/evening.html
+++ b/evening.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./css/todo.css">
     <link rel="stylesheet" href="./css/share.css">
     <link rel="stylesheet" href="./css/copy.css">
+    <link rel="stylesheet" href="./css/evening.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="./eveningLoad.js"></script>
