fix : 両サイトのMTG終了時刻初期値変更

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                                 <select id="MtgEndTime1">
                                     <option>9:00</option>
                                     <option>9:15</option>
-                                    <option>9:30</option>
+                                    <option selected>9:30</option>
                                     <option>9:45</option>
                                     <option>10:00</option>
                                     <option>10:15</option>
