Add mode-aware bootstrap script

--- a/evening.html
+++ b/evening.html
@@ -16,7 +16,6 @@
     <link rel="stylesheet" href="./css/evening.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-    <script src="./eveningLoad.js"></script>
     <script src="./js/onclick.js"></script>
     <script src="./json/templates.js"></script>
     <script src="./js/greeting.js"></script>
@@ -25,9 +24,10 @@
     <script src="./js/todo.js"></script>
     <script src="./js/share.js"></script>
     <script src="./js/remaining.js"></script>
+    <script src="./js/app/bootstrap.js"></script>
 </head>
 
-<body>
+<body data-report-mode="evening">
     <header>
         <h1>勤怠報告コピぺ用：退勤</h1>
     </header>
