--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <link rel="stylesheet" href="./css/copy.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-    <script src="./MorningLoad.js"></script>
     <script src="./js/onclick.js"></script>
     <script src="./json/templates.js"></script>
     <script src="./js/greeting.js"></script>
@@ -24,9 +23,10 @@
     <script src="./js/mtg.js"></script>
     <script src="./js/todo.js"></script>
     <script src="./js/share.js"></script>
+    <script src="./js/app/bootstrap.js"></script>
 </head>
 
-<body>
+<body data-report-mode="morning">
     <header>
         <h1>勤怠報告コピぺ用：出勤</h1>
     </header>
